sidenav: fix z-index

--- a/less/paperhive/affix.less
+++ b/less/paperhive/affix.less
@@ -13,10 +13,10 @@
 	height: 100%;
 	background: @ph-white;
 	padding: 40px (@grid-gutter-width/2) (@grid-gutter-width/2);
-	z-index: @zindex-navbar-fixed;
-    .box-shadow(0 0 10px rgba(0, 0, 0, 0.3));
+	z-index: @zindex-navbar-fixed - 2;
+  .box-shadow(0 0 10px rgba(0, 0, 0, 0.3));
 
-    &.ph-sidenav-small {
+  &.ph-sidenav-small {
 		padding: @padding-large-vertical 0 0;
-    }
+  }
 }
